# mush

./: .gitignore  .packages  .shellspec  2  CLAUDE.md  Makefile  Manifest.toml  Packages  README.md  build.sh  cml.sh
.github/workflows/: autobuild.yml  jekyll-gh-pages.yml  platform-macos-brew.yml.0  platform.yml  shellcheck.yml
docs/: CNAME  _config.yml  commands.md  demo  environment-variables.md  index.md  lectures.md  manifest.md  new  packages-and-modules.md
docs/_includes/:  nav_footer_custom.html  head_custom.html  search_placeholder_custom.html
docs/_layouts/: redirect.html
docs/commands/: 01-mush.md  02-mush-build.md  03-mush-check.md  04-mush-run.md  05-mush-init.md  06-mush-install.md  07-mush-new.md  08-mush-publish.md  09-mush-legacy.md  build.md  legacy.md  mush-build.md  mush-check.md  mush-init.md  mush-install.md  mush-legacy.md  mush-new.md  mush-publish.md  mush-run.md  mush.md
docs/contribute/: contributors.md  lectures.md  package-ideas.md
docs/miscellaneous/: 01-glossary.md  02-benefits.md  03-use-cases.md  04-examples.md  04-installation.md  04-lectures.md  05-examples.md  05-guidelines.md  06-guidelines.md  06-lectures.md  07-lectures.md  07-memes.md  08-memes.md
lib/: bashunit  code_dumper  console  getoptions
src/: .shellcheckrc  VERSION  color.sh  console.sh  env.sh  global.sh  main.sh  polyfill.sh  run.sh
tests/: README.md
tests/fixtures/rust-lib/: Cargo.toml
tests/fixtures/rust-lib/examples/: demo.rs  hello-world.rs
tests/fixtures/rust-lib/src/: lib.rs  my_utils.rs
tests/fixtures/rust-lib/src/mod1/: file1.rs
(+228 files in other folders)
