[package]
name = "rust-lib"
version = "0.1.0"
description = "Mush, a build system for shell."
license = "MIT"
edition = "2021"

#[badges]
#travis-ci = { repository = "https://travis-ci.org/javanile/cask" }

#[build-dependencies]
#build-target = "0.4.0"
#bindgen = "0.60.1"

#[dev-dependencies]
#assert_cmd = "2.0.4"
#itertools = "0.10.5"

[dependencies]
#clap = { version = "4.0.18", features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"] }
#serde_yaml = "0.9.13"
